--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ html,body {
     background-color: #fcdf87;
     padding: 10px 20px;
     margin-right: 10px;
+    margin-bottom: 10px;
     cursor: pointer;
 }
 
